spade-tests/src/snapshots/spade_tests__typeinference__out_of_bounds_type_level_integer_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn return_t<#uint T>() -> int<8> {
    T
}

fn test() -> int<8> {
    return_t::<1024>()
}


error: Integer value does not fit in int<8>
  ┌─ testinput:2:5
  │
2 │     T
  │     ^ 1024 does not fit in an int<8>
  │
  = note: int<8> fits integers in the range (-128, 127)
  = The error is in a generic unit instantiated at
    ╰ testinput:6 return_t<1024>
